2003/12/20 niteria
- Tabs can be inserted into the edit controls of the Text Modules dialog.

2003/12/18 niteria
- Fixed MikTeX recognition. Now it should work with all installation types.
  The "Install Root" found in HKCU is preferred. If not found there,
  then HKLM is used.
- The ListView of the Text Modules dialog gets updated as soon as
  the user changes the name of a module.

2003/12/16 svenwiegand
- Implemented Feature 726766: "Option for selecting the language for the GUI"
- Implemented Feature 601712: "Detailed list view for template dialog"
- Support for selecting Look & Feel out of the following options: 
  "Office 2000", "Office XP", "Windows XP" and "Office 2003"

2003/12/14 niteria
- Partly implemented Feature 531270: User definable insert-commands
  Will be improved later on.

2003/12/14 svenwiegand
- Implemented Feature 531272: Import and export for output profiles
- Implemented Feature 547456: Basic XML-Support

2003/12/13 niteria
- Implemented Feature 797023: Provide standard profile "Latex => PS => PDF"

2003/12/07 svenwiegand
- Implemented Feature 855728: Better Support for visually handicapped users

2003/12/07 niteria
- Implemented Feature 855690: Insert/Remove/Toogle Comments on Textblocks
  Use Ctrl-Q for commenting, Ctrl-W for uncommenting, Alt-Q to toogle
- Defined Accelerator for configuring profiles: Alt-F7 (similar to Visual Studio)

2003/12/06 Superraf
- Implemented Feature 575921: Language is now a parameter of the project

2003/12/06 niteria
- Implemented Feature 851400: \texttt{} and \textsc{} buttons

2003/12/06 svenwiegand
- Implemented Feature 601708 + additions: The user can now set the styles for
  the text cursor independant for the insert and the overwrite mode. The cursor
  style is defined by its form (line or block) and its mode (blinking or 
  not-blinking). The defaults are 'line' for insert cursor and 'block' for
  overwrite cursor -- both are blinking.